--- a/dev/examples/index.html
+++ b/dev/examples/index.html
@@ -13,9 +13,8 @@ end
 
 struct Push{T} &lt;: Message
     content::T
-end</code></pre><p>Now the core lines for implementing the actor&#39;s behavior are essentially the same as in Agha&#39;s example:</p><pre><code class="language-julia">forward!(lk::L, msg::M) where {L&lt;:Link, M&lt;:Message} = send!(lk, msg)
+end</code></pre><p>The code implementing the actor&#39;s behavior is very similar to Agha&#39;s example:</p><pre><code class="language-julia">forward!(lk::L, msg::M) where {L&lt;:Link, M&lt;:Message} = send!(lk, msg)
 
-# ----- this is essentially Agha&#39;s code example written in Julia/YAActL
 function stack_node(sn::StackNode, msg::Pop)
     isnothing(sn.content) || become(forward!, sn.link)
     send!(msg.customer, Response(sn.content))
@@ -24,16 +23,11 @@ end
 function stack_node(sn::StackNode, msg::Push)
     P = Actor(stack_node, sn)
     become(stack_node, StackNode(msg.content, P))
-end</code></pre><p>Now we can create the top of the stack (the receptionist). All other actors of the system are created internally each time we send a <code>Push</code> message. We interact only with the top of the stack:</p><pre><code class="language-julia">julia&gt; mystack = Actor(lk, stack_node, StackNode(nothing, Link()))
+end</code></pre><p>Then we create the top of the stack (the receptionist). All other actors of the system are created internally each time we send a <code>Push</code> message. We interact only with the top of the stack:</p><pre><code class="language-julia">julia&gt; mystack = Actor(lk, stack_node, StackNode(nothing, Link()))
 Channel{Message}(sz_max:32,sz_curr:0)
 
 julia&gt; response = newLink()           # create a response link
 Channel{Message}(sz_max:32,sz_curr:0)
-
-julia&gt; send!(mystack, Pop(response))  # new stack
-
-julia&gt; take!(response)                # returns nothing
-Response{Nothing}(nothing)
 
 julia&gt; send!(mystack, Push(1))        # push 1 on the stack
 
@@ -44,7 +38,7 @@ Response{Int64}(1)
 
 julia&gt; send!(mystack, Pop(response))  # pop again
 
-julia&gt; take!(response)                # now returns nothing
+julia&gt; take!(response)                # now nothing is left
 Response{Nothing}(nothing)
 
 julia&gt; for i ∈ 1:5
@@ -59,44 +53,35 @@ Response{Int64}(5)
 Response{Int64}(4)
 Response{Int64}(3)
 Response{Int64}(2)
-Response{Int64}(1)</code></pre><h2 id="A-Recursive-Factorial"><a class="docs-heading-anchor" href="#A-Recursive-Factorial">A Recursive Factorial</a><a id="A-Recursive-Factorial-1"></a><a class="docs-heading-anchor-permalink" href="#A-Recursive-Factorial" title="Permalink"></a></h2><p>This is Agha&#39;s example 3.2.2:</p><blockquote><p>Our implementation of the <em>factorial</em> relies on creating a <em>customer</em> which waits for the appropriate communication, in this case from the factorial actor itself. The factorial actor is free to concurrently process the next communication. We assume that a communication to a factorial includes a mail address to which the value of the factorial is to be sent.</p></blockquote><p>For demonstration here we setup our customer actors on parallel threads:</p><pre><code class="language-julia">using YAActL
+Response{Int64}(1)</code></pre><h2 id="A-Recursive-Factorial"><a class="docs-heading-anchor" href="#A-Recursive-Factorial">A Recursive Factorial</a><a id="A-Recursive-Factorial-1"></a><a class="docs-heading-anchor-permalink" href="#A-Recursive-Factorial" title="Permalink"></a></h2><p>This is Agha&#39;s example 3.2.2:</p><blockquote><p>Our implementation of the <em>factorial</em> relies on creating a <em>customer</em> which waits for the appropriate communication, in this case from the factorial actor itself. The factorial actor is free to concurrently process the next communication. We assume that a communication to a factorial includes a mail address to which the value of the factorial is to be sent.</p></blockquote><p>For a requested factorial <span>$\,x! : x &gt; 0\,$</span> the <em>factorial</em> actor creates a <em>customer</em> actor on a parallel thread answering the request and sends itself a request with <span>$\,x-1\,$</span> from the newly created customer. The created chain of customer actors finally answers the original request. We implement first the behaviors and then setup the factorial actor <code>F</code> and a response link:</p><pre><code class="language-julia">using YAActL
 
-# implement the behaviors
 function rec_factorial(f::Request)
-    if f.n == 0
+    if f.x == 0
         send!(f.u, Response(1))
     else
-        c = Actor(parallel(), rec_customer, f.n, f.u) # setup parallel actors
-        send!(self(), Request(f.n - 1, c))
+        c = Actor(parallel(), rec_customer, f.x, f.u) # setup parallel actors
+        send!(self(), Request(f.x - 1, c))
     end
 end
 
-rec_customer(n::Integer, u::Link, k::Response) = send!(u, Response(n * k.y))
+function rec_customer(n::Integer, u::Link, k::Response) 
+    send!(u, Response(n * k.y))
+    stop()
+end
 
-# setup factorial actor and response link
 F = Actor(rec_factorial)
-resp = newLink()</code></pre><p>Now we can send requests to the factorial actor and take the answers from the response link:</p><pre><code class="language-julia">julia&gt; for i ∈ 0:20
-           send!(F, Request(i, resp))
-           println(take!(resp))
-       end
-Response(1)
-Response(1)
-Response(2)
-Response(6)
-Response(24)
-Response(120)
-Response(720)
-Response(5040)
-Response(40320)
-Response(362880)
-Response(3628800)
-Response(39916800)
-Response(479001600)
-Response(6227020800)
-Response(87178291200)
-Response(1307674368000)
-Response(20922789888000)
-Response(355687428096000)
-Response(6402373705728000)
-Response(121645100408832000)
-Response(2432902008176640000)</code></pre><p>If we send our requests successively without waiting and then read the response link, we still get the same sequence – which is a bit surprising.</p></article><nav class="docs-footer"><a class="docs-footer-prevpage" href="../usage/">« Usage</a><div class="flexbox-break"></div><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> on <span class="colophon-date" title="Wednesday 29 July 2020 18:22">Wednesday 29 July 2020</span>. Using Julia version 1.4.2.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
+resp = newLink()</code></pre><p>Now we can send requests to the factorial actor and take the answers from the response link:</p><pre><code class="language-julia">julia&gt;  for i ∈ 0:5:50      # send and receive loop
+            send!(F, Request(big(i), resp))
+            println(take!(resp))
+        end
+Response{Int64}(1)
+Response{BigInt}(120)
+Response{BigInt}(3628800)
+Response{BigInt}(1307674368000)
+Response{BigInt}(2432902008176640000)
+Response{BigInt}(15511210043330985984000000)
+Response{BigInt}(265252859812191058636308480000000)
+Response{BigInt}(10333147966386144929666651337523200000000)
+Response{BigInt}(815915283247897734345611269596115894272000000000)
+Response{BigInt}(119622220865480194561963161495657715064383733760000000000)
+Response{BigInt}(30414093201713378043612608166064768844377641568960512000000000000)</code></pre><p>If we send our requests successively without waiting and then read the response link, we still get the same sequence – which is a bit surprising. For sure this is not the most effective method to implement a factorial.</p></article><nav class="docs-footer"><a class="docs-footer-prevpage" href="../usage/">« Usage</a><div class="flexbox-break"></div><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> on <span class="colophon-date" title="Thursday 30 July 2020 08:08">Thursday 30 July 2020</span>. Using Julia version 1.4.2.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
