--- a/dev/examples/factorial/index.html
+++ b/dev/examples/factorial/index.html
@@ -18,16 +18,16 @@ end
 F = Actor(rec_factorial)
 resp = newLink()</code></pre><p>Now we can send requests to the factorial actor and take the answers from the response link:</p><pre><code class="language-julia">julia&gt;  for i ∈ 0:5:50      # send and receive loop
             send!(F, Request(big(i), resp))
-            println(take!(resp))
+            println(receive!(resp).y)
         end
-Response{Int64}(1)
-Response{BigInt}(120)
-Response{BigInt}(3628800)
-Response{BigInt}(1307674368000)
-Response{BigInt}(2432902008176640000)
-Response{BigInt}(15511210043330985984000000)
-Response{BigInt}(265252859812191058636308480000000)
-Response{BigInt}(10333147966386144929666651337523200000000)
-Response{BigInt}(815915283247897734345611269596115894272000000000)
-Response{BigInt}(119622220865480194561963161495657715064383733760000000000)
-Response{BigInt}(30414093201713378043612608166064768844377641568960512000000000000)</code></pre><p>If we send our requests successively without waiting and then read the response link, we still get the same sequence – which is a bit surprising. For sure this is not the most effective method to implement a factorial.</p></article><nav class="docs-footer"><a class="docs-footer-prevpage" href="../stack/">« A Stack</a><a class="docs-footer-nextpage" href="../state-machines/">State Machines »</a><div class="flexbox-break"></div><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> on <span class="colophon-date" title="Monday 19 October 2020 07:09">Monday 19 October 2020</span>. Using Julia version 1.5.2.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
+1
+120
+3628800
+1307674368000
+2432902008176640000
+15511210043330985984000000
+265252859812191058636308480000000
+10333147966386144929666651337523200000000
+815915283247897734345611269596115894272000000000
+119622220865480194561963161495657715064383733760000000000
+30414093201713378043612608166064768844377641568960512000000000000</code></pre><p>If we send our requests successively without waiting and then read the response link, we still get the same sequence – which is a bit surprising. For sure this is not the most effective method to implement a factorial.</p></article><nav class="docs-footer"><a class="docs-footer-prevpage" href="../stack/">« A Stack</a><a class="docs-footer-nextpage" href="../state-machines/">State Machines »</a><div class="flexbox-break"></div><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> on <span class="colophon-date" title="Monday 19 October 2020 11:01">Monday 19 October 2020</span>. Using Julia version 1.5.2.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
