--- a/dev/examples/stack/index.html
+++ b/dev/examples/stack/index.html
@@ -30,16 +30,17 @@ julia&gt; response = newLink()           # create a response link
 Channel{Message}(sz_max:32,sz_curr:0)
 
 julia&gt; send!(mystack, Push(1))        # push 1 on the stack
+Push{Int64}(1)
 
 julia&gt; send!(mystack, Pop(response))  # pop it
+Pop(Channel{Message}(sz_max:32,sz_curr:1))
 
-julia&gt; take!(response)                # returns 1, 1st node now forwards messages
-Response{Int64}(1)
+julia&gt; receive!(response).y           # returns 1, 1st node now forwards messages
+1
 
-julia&gt; send!(mystack, Pop(response))  # pop again
+julia&gt; send!(mystack, Pop(response)); # pop again
 
-julia&gt; take!(response)                # now nothing is left
-Response{Nothing}(nothing)
+julia&gt; receive!(response)             # now nothing is left
 
 julia&gt; for i ∈ 1:5
            send!(mystack, Push(i))
@@ -47,10 +48,10 @@ julia&gt; for i ∈ 1:5
 
 julia&gt; for i ∈ 1:5
            send!(mystack, Pop(response))
-           println(take!(response))
+           println(receive!(response).y)
        end
-Response{Int64}(5)
-Response{Int64}(4)
-Response{Int64}(3)
-Response{Int64}(2)
-Response{Int64}(1)</code></pre></article><nav class="docs-footer"><a class="docs-footer-prevpage" href="../../api/">« Actor API</a><a class="docs-footer-nextpage" href="../factorial/">A Recursive Factorial »</a><div class="flexbox-break"></div><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> on <span class="colophon-date" title="Monday 19 October 2020 07:09">Monday 19 October 2020</span>. Using Julia version 1.5.2.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
+5
+4
+3
+2
+1</code></pre></article><nav class="docs-footer"><a class="docs-footer-prevpage" href="../../api/">« Actor API</a><a class="docs-footer-nextpage" href="../factorial/">A Recursive Factorial »</a><div class="flexbox-break"></div><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> on <span class="colophon-date" title="Monday 19 October 2020 11:01">Monday 19 October 2020</span>. Using Julia version 1.5.2.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
