--- a/dev/actors/index.html
+++ b/dev/actors/index.html
@@ -11,7 +11,7 @@ julia&gt; act2 = Actor(parallel(), threadid)   # start a parallel actor
 Link{Channel{Message}}(Channel{Message}(sz_max:32,sz_curr:0), 1, :local)
 
 julia&gt; call!(act2)                          # and call it
-1
+2
 
 julia&gt; using Distributed
 
@@ -59,7 +59,7 @@ julia&gt; exit!(act4)                    # stop it
 YAActL.Stop(0)
 
 julia&gt; act4.state
-ERROR: type Link has no field state</code></pre><h2 id="Actor-Registry"><a class="docs-heading-anchor" href="#Actor-Registry">Actor Registry</a><a id="Actor-Registry-1"></a><a class="docs-heading-anchor-permalink" href="#Actor-Registry" title="Permalink"></a></h2><p>If a parent actor or worker process creates a new actor, the link to it is only locally known. It has to be sent to all other actors that want to communicate with it.</p><p>Alternatively an actor link can be registered under a name (a <code>Symbol</code>). Then any actor in the system can communicate with it using that name.</p><pre><code class="language-julia-repl">julia&gt; using YAActL, Distributed
+ERROR: type Link has no field state</code></pre><h2 id="Actor-Registry"><a class="docs-heading-anchor" href="#Actor-Registry">Actor Registry</a><a id="Actor-Registry-1"></a><a class="docs-heading-anchor-permalink" href="#Actor-Registry" title="Permalink"></a></h2><p>If a parent actor or worker process creates a new actor, the link to it is only locally known. It has to be sent to all other actors that want to communicate with it.</p><p>Alternatively an actor link can be registered under a name (a <code>Symbol</code>). Then any actor in the system can communicate with it using that name.</p><pre><code class="language-julia">julia&gt; using YAActL, Distributed
 
 julia&gt; addprocs(1);
 
@@ -71,102 +71,39 @@ julia&gt; @everywhere function ident(id, from)
                (&quot;remote actor&quot;, id, from)
        end
 
-
 julia&gt; register(:act1, Actor(ident, 1))       # a registered local actor
-ERROR: UndefVarError: ident not defined
+true
 
 julia&gt; call!(:act1, myid())                   # call! it
-ERROR: MethodError: no method matching call!(::Missing, ::Int64)
-Closest candidates are:
-  call!(!Matched::Link, ::Any...; timeout) at /home/travis/build/pbayer/YAActL.jl/src/api.jl:41
-  call!(!Matched::Symbol, ::Any...; kwargs...) at /home/travis/build/pbayer/YAActL.jl/src/api.jl:42
+(&quot;local actor&quot;, 1, 1)
 
 julia&gt; register(:act2, Actor(2, ident, 2))    # a registered remote actor on pid 2
-ERROR: UndefVarError: ident not defined
+true
 
 julia&gt; call!(:act2, myid())                   # call! it
-ERROR: MethodError: no method matching call!(::Missing, ::Int64)
-Closest candidates are:
-  call!(!Matched::Link, ::Any...; timeout) at /home/travis/build/pbayer/YAActL.jl/src/api.jl:41
-  call!(!Matched::Symbol, ::Any...; kwargs...) at /home/travis/build/pbayer/YAActL.jl/src/api.jl:42
+(&quot;remote actor&quot;, 2, 1)
 
 julia&gt; fetch(@spawnat 2 call!(:act1, myid())) # call! :act1 on pid 2
-ERROR: On worker 2:
-UndefVarError: ##ex-#255 not defined
-deserialize_module at /buildworker/worker/package_linux64/build/usr/share/julia/stdlib/v1.5/Serialization/src/Serialization.jl:956
-handle_deserialize at /buildworker/worker/package_linux64/build/usr/share/julia/stdlib/v1.5/Serialization/src/Serialization.jl:855
-deserialize at /buildworker/worker/package_linux64/build/usr/share/julia/stdlib/v1.5/Serialization/src/Serialization.jl:773
-deserialize_datatype at /buildworker/worker/package_linux64/build/usr/share/julia/stdlib/v1.5/Serialization/src/Serialization.jl:1251
-handle_deserialize at /buildworker/worker/package_linux64/build/usr/share/julia/stdlib/v1.5/Serialization/src/Serialization.jl:826
-deserialize at /buildworker/worker/package_linux64/build/usr/share/julia/stdlib/v1.5/Serialization/src/Serialization.jl:773
-handle_deserialize at /buildworker/worker/package_linux64/build/usr/share/julia/stdlib/v1.5/Serialization/src/Serialization.jl:833
-deserialize at /buildworker/worker/package_linux64/build/usr/share/julia/stdlib/v1.5/Serialization/src/Serialization.jl:773 [inlined]
-deserialize_msg at /buildworker/worker/package_linux64/build/usr/share/julia/stdlib/v1.5/Distributed/src/messages.jl:99
-#invokelatest#1 at ./essentials.jl:710 [inlined]
-invokelatest at ./essentials.jl:709 [inlined]
-message_handler_loop at /buildworker/worker/package_linux64/build/usr/share/julia/stdlib/v1.5/Distributed/src/process_messages.jl:185
-process_tcp_streams at /buildworker/worker/package_linux64/build/usr/share/julia/stdlib/v1.5/Distributed/src/process_messages.jl:142
-#99 at ./task.jl:356
+(&quot;remote actor&quot;, 1, 2)
 
 julia&gt; fetch(@spawnat 2 call!(:act2, myid())) # call! :act2 on pid 2
-ERROR: On worker 2:
-UndefVarError: ##ex-#255 not defined
-deserialize_module at /buildworker/worker/package_linux64/build/usr/share/julia/stdlib/v1.5/Serialization/src/Serialization.jl:956
-handle_deserialize at /buildworker/worker/package_linux64/build/usr/share/julia/stdlib/v1.5/Serialization/src/Serialization.jl:855
-deserialize at /buildworker/worker/package_linux64/build/usr/share/julia/stdlib/v1.5/Serialization/src/Serialization.jl:773
-deserialize_datatype at /buildworker/worker/package_linux64/build/usr/share/julia/stdlib/v1.5/Serialization/src/Serialization.jl:1251
-handle_deserialize at /buildworker/worker/package_linux64/build/usr/share/julia/stdlib/v1.5/Serialization/src/Serialization.jl:826
-deserialize at /buildworker/worker/package_linux64/build/usr/share/julia/stdlib/v1.5/Serialization/src/Serialization.jl:773
-handle_deserialize at /buildworker/worker/package_linux64/build/usr/share/julia/stdlib/v1.5/Serialization/src/Serialization.jl:833
-deserialize at /buildworker/worker/package_linux64/build/usr/share/julia/stdlib/v1.5/Serialization/src/Serialization.jl:773 [inlined]
-deserialize_msg at /buildworker/worker/package_linux64/build/usr/share/julia/stdlib/v1.5/Distributed/src/messages.jl:99
-#invokelatest#1 at ./essentials.jl:710 [inlined]
-invokelatest at ./essentials.jl:709 [inlined]
-message_handler_loop at /buildworker/worker/package_linux64/build/usr/share/julia/stdlib/v1.5/Distributed/src/process_messages.jl:185
-process_tcp_streams at /buildworker/worker/package_linux64/build/usr/share/julia/stdlib/v1.5/Distributed/src/process_messages.jl:142
-#99 at ./task.jl:356
+(&quot;local actor&quot;, 2, 2)
 
 julia&gt; whereis(:act1)                         # get a link to :act1
-missing
+Link{Channel{Message}}(Channel{Message}(sz_max:32,sz_curr:0), 1, :local)
 
 julia&gt; whereis(:act2)                         # get a link to :act2
-missing
+Link{RemoteChannel{Channel{Message}}}(RemoteChannel{Channel{Message}}(2, 1, 383), 2, :remote)
 
 julia&gt; fetch(@spawnat 2 whereis(:act1))       # get a link to :act1 on pid 2
-ERROR: On worker 2:
-UndefVarError: ##ex-#255 not defined
-deserialize_module at /buildworker/worker/package_linux64/build/usr/share/julia/stdlib/v1.5/Serialization/src/Serialization.jl:956
-handle_deserialize at /buildworker/worker/package_linux64/build/usr/share/julia/stdlib/v1.5/Serialization/src/Serialization.jl:855
-deserialize at /buildworker/worker/package_linux64/build/usr/share/julia/stdlib/v1.5/Serialization/src/Serialization.jl:773
-deserialize_datatype at /buildworker/worker/package_linux64/build/usr/share/julia/stdlib/v1.5/Serialization/src/Serialization.jl:1251
-handle_deserialize at /buildworker/worker/package_linux64/build/usr/share/julia/stdlib/v1.5/Serialization/src/Serialization.jl:826
-deserialize at /buildworker/worker/package_linux64/build/usr/share/julia/stdlib/v1.5/Serialization/src/Serialization.jl:773
-handle_deserialize at /buildworker/worker/package_linux64/build/usr/share/julia/stdlib/v1.5/Serialization/src/Serialization.jl:833
-deserialize at /buildworker/worker/package_linux64/build/usr/share/julia/stdlib/v1.5/Serialization/src/Serialization.jl:773 [inlined]
-deserialize_msg at /buildworker/worker/package_linux64/build/usr/share/julia/stdlib/v1.5/Distributed/src/messages.jl:99
-#invokelatest#1 at ./essentials.jl:710 [inlined]
-invokelatest at ./essentials.jl:709 [inlined]
-message_handler_loop at /buildworker/worker/package_linux64/build/usr/share/julia/stdlib/v1.5/Distributed/src/process_messages.jl:185
-process_tcp_streams at /buildworker/worker/package_linux64/build/usr/share/julia/stdlib/v1.5/Distributed/src/process_messages.jl:142
-#99 at ./task.jl:356
+Link{RemoteChannel{Channel{Message}}}(RemoteChannel{Channel{Message}}(1, 1, 407), 1, :remote)
 
 julia&gt; registered()                           # get a list of registered actors
-Pair{Symbol,Link}[]
+2-element Array{Pair{Symbol,Link},1}:
+ :act2 =&gt; Link{RemoteChannel{Channel{Message}}}(RemoteChannel{Channel{Message}}(2, 1, 383), 2, :remote)
+ :act1 =&gt; Link{Channel{Message}}(Channel{Message}(sz_max:32,sz_curr:0), 1, :local)
 
 julia&gt; fetch(@spawnat 2 registered())         # get it on pid 2
-ERROR: On worker 2:
-UndefVarError: ##ex-#255 not defined
-deserialize_module at /buildworker/worker/package_linux64/build/usr/share/julia/stdlib/v1.5/Serialization/src/Serialization.jl:956
-handle_deserialize at /buildworker/worker/package_linux64/build/usr/share/julia/stdlib/v1.5/Serialization/src/Serialization.jl:855
-deserialize at /buildworker/worker/package_linux64/build/usr/share/julia/stdlib/v1.5/Serialization/src/Serialization.jl:773
-deserialize_datatype at /buildworker/worker/package_linux64/build/usr/share/julia/stdlib/v1.5/Serialization/src/Serialization.jl:1251
-handle_deserialize at /buildworker/worker/package_linux64/build/usr/share/julia/stdlib/v1.5/Serialization/src/Serialization.jl:826
-deserialize at /buildworker/worker/package_linux64/build/usr/share/julia/stdlib/v1.5/Serialization/src/Serialization.jl:773
-handle_deserialize at /buildworker/worker/package_linux64/build/usr/share/julia/stdlib/v1.5/Serialization/src/Serialization.jl:833
-deserialize at /buildworker/worker/package_linux64/build/usr/share/julia/stdlib/v1.5/Serialization/src/Serialization.jl:773 [inlined]
-deserialize_msg at /buildworker/worker/package_linux64/build/usr/share/julia/stdlib/v1.5/Distributed/src/messages.jl:99
-#invokelatest#1 at ./essentials.jl:710 [inlined]
-invokelatest at ./essentials.jl:709 [inlined]
-message_handler_loop at /buildworker/worker/package_linux64/build/usr/share/julia/stdlib/v1.5/Distributed/src/process_messages.jl:185
-process_tcp_streams at /buildworker/worker/package_linux64/build/usr/share/julia/stdlib/v1.5/Distributed/src/process_messages.jl:142
-#99 at ./task.jl:356</code></pre><p>The registry works transparently across workers. All workers have access to registered actors on other workers via remote links.</p><h2 id="Actor-Isolation"><a class="docs-heading-anchor" href="#Actor-Isolation">Actor Isolation</a><a id="Actor-Isolation-1"></a><a class="docs-heading-anchor-permalink" href="#Actor-Isolation" title="Permalink"></a></h2><p>In order to avoid race conditions actors have to be strongly isolated from each other:</p><ol><li>they do not share state,</li><li>they must not share mutable variables.</li></ol><p>An actor stores the behavior function and arguments to it, results of computations and more. Thus it has <a href="../internals/#state">state</a> and this influences how it behaves.</p><p>But it does <strong>not share</strong> its state variables with its environment (only for <a href="../diagnosis/">diagnostic</a> purposes). The <a href="../api/">API</a> functions above are a safe way to access actor state via messaging.</p><p>Mutable variables in Julia can be sent over local channels without being copied. Accessing those variables from multiple threads can cause race conditions. The programmer has to be careful to avoid those situations either by</p><ul><li>not sharing them between actors,</li><li>copying them when sending them to actors or</li><li>acquiring a lock around any access to data that can be observed from multiple threads. <sup class="footnote-reference"><a id="citeref-3" href="#footnote-3">[3]</a></sup></li></ul><p>When sending mutable variables over remote links, they are automatically copied.</p><h2 id="Actor-Local-Dictionary"><a class="docs-heading-anchor" href="#Actor-Local-Dictionary">Actor Local Dictionary</a><a id="Actor-Local-Dictionary-1"></a><a class="docs-heading-anchor-permalink" href="#Actor-Local-Dictionary" title="Permalink"></a></h2><p>Since actors are Julia tasks, they have a local dictionary in which you can store values. You can use <a href="https://docs.julialang.org/en/v1/base/parallel/#Base.task_local_storage-Tuple{Any}"><code>task_local_storage</code></a> to access it in behavior functions. But normally the state variable <a href="../internals/#YAActL._ACT"><code>sta</code></a> and argument passing should be enough to handle values in actors.</p><section class="footnotes is-size-7"><ul><li class="footnote" id="footnote-1"><a class="tag is-link" href="#citeref-1">1</a>See: The <a href="https://en.wikipedia.org/wiki/Actor_model">Actor Model</a> on Wikipedia.</li><li class="footnote" id="footnote-2"><a class="tag is-link" href="#citeref-2">2</a>They build on Julia&#39;s concurrency primitives  <code>@spawn</code>, <code>put!</code> and <code>take!</code> on <code>Channel</code>s.</li><li class="footnote" id="footnote-3"><a class="tag is-link" href="#citeref-3">3</a>see <a href="https://docs.julialang.org/en/v1/manual/multi-threading/#Data-race-freedom">Data race freedom</a> in the Julia manual.</li></ul></section></article><nav class="docs-footer"><a class="docs-footer-prevpage" href="../intro/">« Introduction</a><a class="docs-footer-nextpage" href="../behavior/">Behaviors »</a><div class="flexbox-break"></div><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> on <span class="colophon-date" title="Saturday 7 November 2020 11:03">Saturday 7 November 2020</span>. Using Julia version 1.5.2.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
+2-element Array{Pair{Symbol,Link{RemoteChannel{Channel{Message}}}},1}:
+ :act2 =&gt; Link{RemoteChannel{Channel{Message}}}(RemoteChannel{Channel{Message}}(2, 1, 383), 2, :remote)
+ :act1 =&gt; Link{RemoteChannel{Channel{Message}}}(RemoteChannel{Channel{Message}}(1, 1, 413), 1, :remote)</code></pre><p>The registry works transparently across workers. All workers have access to registered actors on other workers via remote links.</p><h2 id="Actor-Isolation"><a class="docs-heading-anchor" href="#Actor-Isolation">Actor Isolation</a><a id="Actor-Isolation-1"></a><a class="docs-heading-anchor-permalink" href="#Actor-Isolation" title="Permalink"></a></h2><p>In order to avoid race conditions actors have to be strongly isolated from each other:</p><ol><li>they do not share state,</li><li>they must not share mutable variables.</li></ol><p>An actor stores the behavior function and arguments to it, results of computations and more. Thus it has <a href="../internals/#state">state</a> and this influences how it behaves.</p><p>But it does <strong>not share</strong> its state variables with its environment (only for <a href="../diagnosis/">diagnostic</a> purposes). The <a href="../api/">API</a> functions above are a safe way to access actor state via messaging.</p><p>Mutable variables in Julia can be sent over local channels without being copied. Accessing those variables from multiple threads can cause race conditions. The programmer has to be careful to avoid those situations either by</p><ul><li>not sharing them between actors,</li><li>copying them when sending them to actors or</li><li>acquiring a lock around any access to data that can be observed from multiple threads. <sup class="footnote-reference"><a id="citeref-3" href="#footnote-3">[3]</a></sup></li></ul><p>When sending mutable variables over remote links, they are automatically copied.</p><h2 id="Actor-Local-Dictionary"><a class="docs-heading-anchor" href="#Actor-Local-Dictionary">Actor Local Dictionary</a><a id="Actor-Local-Dictionary-1"></a><a class="docs-heading-anchor-permalink" href="#Actor-Local-Dictionary" title="Permalink"></a></h2><p>Since actors are Julia tasks, they have a local dictionary in which you can store values. You can use <a href="https://docs.julialang.org/en/v1/base/parallel/#Base.task_local_storage-Tuple{Any}"><code>task_local_storage</code></a> to access it in behavior functions. But normally the state variable <a href="../internals/#YAActL._ACT"><code>sta</code></a> and argument passing should be enough to handle values in actors.</p><section class="footnotes is-size-7"><ul><li class="footnote" id="footnote-1"><a class="tag is-link" href="#citeref-1">1</a>See: The <a href="https://en.wikipedia.org/wiki/Actor_model">Actor Model</a> on Wikipedia.</li><li class="footnote" id="footnote-2"><a class="tag is-link" href="#citeref-2">2</a>They build on Julia&#39;s concurrency primitives  <code>@spawn</code>, <code>put!</code> and <code>take!</code> on <code>Channel</code>s.</li><li class="footnote" id="footnote-3"><a class="tag is-link" href="#citeref-3">3</a>see <a href="https://docs.julialang.org/en/v1/manual/multi-threading/#Data-race-freedom">Data race freedom</a> in the Julia manual.</li></ul></section></article><nav class="docs-footer"><a class="docs-footer-prevpage" href="../intro/">« Introduction</a><a class="docs-footer-nextpage" href="../behavior/">Behaviors »</a><div class="flexbox-break"></div><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> on <span class="colophon-date" title="Saturday 7 November 2020 12:15">Saturday 7 November 2020</span>. Using Julia version 1.5.2.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
